# wheel-trading

./: .claude-context.md  .claudeignore  .coverage 2  .coverage 4  .coverage 5  .dockerignore  .editorconfig  .env.example  .env.monitoring  .envrc  .envrc.bak  .eslintrc.json  .flake8  .gitignore  .gitmessage  .mcp.json  .metal-sdk-version  .pre-commit-config-optimized.yaml  .pre-commit-config-personal.yaml  .pre-commit-config.yaml  .prettierrc.json  .wezterm-init.sh  .wezterm-init.sh.backup  .wezterm.lua  .wezterm_optimized.lua  .zshrc.wheel  00_ORCHESTRATOR_SPEC.md  AGENT10_DEPRECATED_FILES_RETIREMENT_LIST.md  AGENT_12_COMPREHENSIVE_VALIDATION_DELIVERY.md  AGENT_COORDINATION_FIXES.md  AGENT_FIXES_REQUIRED.md  ARCHITECTURE.md  BACKTEST_RESULTS_SUMMARY.md  BOB_ARCHITECTURE.md  BOB_CLI_README.md  BOB_CLI_REFERENCE.md  BOB_CLI_SPECIFICATION.md  BOB_M4_OPTIMIZATIONS_README.md  BOB_MIGRATION_INVENTORY.md  BOB_QUICK_START.md  (+736 more)
.bob_migration_backup_20250616_154502/: bob_cli.py  bob_unified.py  bolt_cli.py  unified_cli.py
.claude_backup_20250616_140632/: .env.claude-optimized  .envrc  claude-mcp.json
.cleanup_backup_20250611_111455/: duplicate_files.txt
.codex/: .container_env  .env  ACCESS_FIXED.md  AGENTS.md  CODEX_ENVIRONMENT_COMPLETE.md  CODEX_GUIDE.md  CONTAINER_IMPROVEMENTS.md  CONTAINER_README.md  CURRENT_STATE.md  ENVIRONMENT_SETUP.md  README.md  SETUP_NOTES.md  SETUP_SUCCESS.md  SUCCESS.md  activate_container.sh  bootstrap_container.sh  check_environment.py  config.yaml  container_commit.sh  container_setup.sh  container_setup_v26.sh  container_setup_v27.sh  container_setup_v28.sh  container_setup_v29.sh  container_setup_v30.sh  container_setup_v31.sh  container_setup_v32.sh  container_setup_v33.sh  container_setup_v34.sh  container_setup_v35.sh  diagnose.sh  find_optimizations.sh  fix_imports.sh  instant_setup.sh  minimal_trader.py  quick_setup.sh  run_tests.sh  setup_offline.sh  status.sh  sync_to_src.sh  (+2 more)
.einstein/: analytics.db  scan_cache.json  status.json
.github/: CODEOWNERS  README.md  SECURITY.md  claude-context.md  copilot-instructions.md  dependabot.yml  pull_request_template.md
.jarvis/: experience.db
.mac_thinking_cache/: data.mdb  lock.mdb
.metacoding_cache/: data.mdb  lock.mdb
.thinking_cache/: data.mdb  lock.mdb
app/: pytest_cov.py
bob/: __init__.py  compatibility.py
bolt/: AGENT_ENGINE_IMPLEMENTATION.md  __init__.py  buffer_stride_validation.py  config.yaml.example  database_memory_optimizer.py  fallback_metal_monitor.py  gpu_acceleration.py  gpu_acceleration_enhanced.py  gpu_acceleration_optimized.py  gpu_acceleration_optimized_v2.py  gpu_acceleration_ultimate_fix.py  gpu_pipeline_optimization.py  hardware_state.py  hardware_state_integration_example.py  improved_validation_suite.py  integration.py  logging_config.py  memory_integration_examples.py  memory_manager.py  memory_optimization_integration.py  memory_optimized_bolt.py  metal_monitor.py  optimized_solve.py  production_error_recovery.py  solve.py  thermal_dashboard.py  unified_memory.py  unified_memory_pressure_handler.py
bolt_migration_backup_20250616_155451/: backup_manifest.json
bolt_solver.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
config/: database.yaml  duckdb_performance.sql
config_backup_agent4/: .pre-commit-config.yaml  backup_manifest.json  logging_config.json  meta_system_config.json
data_audit/: data_audit_2025-06-10.jsonl  data_audit_2025-06-13.jsonl  data_audit_2025-06-14.jsonl  data_audit_2025-06-15.jsonl  data_audit_2025-06-16.jsonl
data_pipeline/: patterns
database_reports/: database_integrity_report_20250615_201853.json  database_integrity_report_20250616_092600.json  database_integrity_summary_20250615_201853.txt  database_integrity_summary_20250616_092600.txt
deployment/: Dockerfile.job  cloud_run_job.yaml
diagnostic-bundle/: .envrc  CLAUDE.md  README.txt  brave.mcp.json  cli_version.txt  com.mcp.autostart.plist  data_stores.txt  dependency-graph.mcp.json  duckdb.mcp.json  env_vars.txt  filesystem.mcp.json  github.mcp.json  lang_breakdown.json  logfire.mcp.json  mac_system_info.txt  mcp_inventory.json  mcp_inventory_summary.json  mcp_launchers.txt  mcp_runtime_status.txt  mem_total_bytes.txt  memory.mcp.json  mlflow.mcp.json  optionsflow.mcp.json  puppeteer.mcp.json  pyrepl.mcp.json  python_analysis.mcp.json  python_packages.json  repo_stats.txt  requirements-dev.txt  requirements.txt  ripgrep.mcp.json  scripts_listing.txt  sequential-thinking.mcp.json  setup.py  sklearn.mcp.json  statsource.mcp.json  trace.mcp.json  ulimits.txt  venv_spec.txt  vscode_tasks.json
docs/: ADVANCED_FINANCIAL_MODELING_GUIDE 2.md  ADVANCED_FINANCIAL_MODELING_GUIDE.md  API_GUIDE.md  BOLT_ENVIRONMENT_VARIABLES.md  BORROWING_COST_ANALYSIS_GUIDE.md  BORROWING_IMPROVEMENTS_TODO 2.md  BORROWING_IMPROVEMENTS_TODO.md  CONFIGURATION_README.md  DATABASE_ARCHITECTURE.md  DATABENTO_UNITY_GUIDE.md  DOCUMENTATION_TEMPLATE.md  EINSTEIN_ENVIRONMENT_VARIABLES.md  IMPORT_PATH_STANDARDS.md  KEYCHAIN_SECRETS_GUIDE.md  LIVE_DATA_SAFEGUARDS.md  MCP_COMPLETE_GUIDE.md  OPRA_IMPORT_GUIDE.md  OPTIMAL_DATA_STRUCTURE.md  OPTIMIZATION_IMPLEMENTATION_SUMMARY.md  ORCHESTRATOR_GUIDE.md  ORCHESTRATOR_OPTIMIZATIONS.md  SLICE_CACHE.md  TECHNICAL_SPEC_PART5.md  TECHNICAL_SPEC_PART6.md  TERMINAL_TOOLS.md  UNIFIED_COMPUTE_MASTER_INDEX.md  UNITY_OPTIONS_ANALYSIS.md  async_sync_boundaries.md  context_bridge.py  deps.json
einstein/: __init__.py  adaptive_concurrency.py  adaptive_router.py  cached_query_router.py  claude_code_optimizer.py  code_optimized_embeddings.py  config.yaml.example  coverage_analyzer.py  einstein_config.py  file_watcher.py  high_performance_search.py  incremental_faiss_indexer.py  memory_optimizer.py  mlx_no_grad_fix.py  optimized_result_merger.py  optimized_unified_search.py  query_router.py  rapid_startup.py  result_merger.py  search_memory_optimizer.py  unified_index.py
examples/: bolt_integration_demo.py  memory_trading_integration.py  production_streaming_integration.py  single_account_simple.py  streaming_processors_demo.py
exports/: metrics.db
(+1304 files in other folders)
